--- a/composer.json
+++ b/composer.json
@@ -61,3 +61,12 @@
     "minimum-stability": "dev",
     "prefer-stable": true
 }
+"scripts": {
+  "post-root-package-install": [
+    "@php artisan key:generate"
+  ],
+  "post-create-project-cmd": [
+    "@php artisan migrate --force"
+  ]
+}
+
